# TCP-Web-Server-for-learning

./: .gitignore  CMakeLists.txt  README.md
include/: event_handler.h  sock_unix.h
lib/: event_handler.c  sock_unix.c
src/: client.c  serv.c  serv_fork_per.c  serv_prethread.c  web.c  web.h
